add order-manager and misc.